--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -21,7 +21,7 @@
 \newcounter{parnum}[section]
 \newcommand{\N}{%
    \noindent\refstepcounter{parnum}%
-    \makebox[\parindent][l]{\textbf{\arabic{parnum}}}}
+    \makebox[1em][l]{\small{\arabic{parnum}}}}
 % Use a generous paragraph indent so numbers can be fit inside the
 % indentation space.
 \setlength{\parindent}{2em}
@@ -74,11 +74,18 @@
 
 \subsection*{创世}
 % In the beginning God created the heavens and the earth.
-\N 起初上帝创造了诸天和地。
+\N 起初上帝创造诸天和地。
 % Now the earth was formless and void, and darkness was over the surface of the deep. And the Spirit of God was hovering over the surface of the waters.
 \N 现在地是混沌空虚的，黑暗在深渊的表面之上，而上帝的圣灵在诸水上盘旋着。
-	\footnote {
-	}
+
+\subsubsection*{第一日}
+% And God said, “Let there be light,” and there was light.
+\N 而上帝说，“让那有光”，就有了光。
+% God saw that the light was good, and he separated the light from the darkness.
+\N 上帝见那光是善的，祂就将那光从那黑暗分离。
+% God called the light “day,” and the darkness He called “night.” And there was evening, and there was morning—the first day.
+\N 上帝称那光为“昼”，而那黑暗祂称为“夜。”于是有夜晚，又有早晨---这是第一日。
+\subsubsection*{第二日}
 	
 \thispagestyle{empty}
 \newpage
