--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -85,7 +85,26 @@
 \N 上帝见那光是善的，祂就将那光从那黑暗分离。
 % God called the light “day,” and the darkness He called “night.” And there was evening, and there was morning—the first day.
 \N 上帝称那光为“昼”，而那黑暗祂称为“夜。”于是有夜晚，又有早晨---这是第一日。
+
 \subsubsection*{第二日}
+% And God said, “Let there be an expanse between the waters, to separate the waters from the waters.”
+\N 而上帝说，“让那诸水之间有穹苍将水和水分离。”
+% So God made the expanse and separated the waters beneath it from the waters above. And it was so.
+\N 所以上帝制造那穹苍并将它之下的诸水与之上的诸水分离。而它就如此。
+% God called the expanse “sky.” And there was evening, and there was morning—the second day.
+\N 上帝称穹苍为“天空。”于是有夜晚，又有早晨---这是第二日。
+
+\subsubsection*{第三日}
+% And God said, “Let the waters under the sky be gathered into one place, so that the dry land may appear.” And it was so.
+\N 而上帝说，“让天空之下的诸水被聚集到一个地方，以使陆地能显现。”而它就如此。
+% God called the dry land “earth,” and the gathering of waters He called “seas.” And God saw that it was good.
+\N 上帝称那陆地为“大地”，而诸水聚集处祂称为“海洋。”而上帝见它是善的。
+% Then God said, “Let the earth bring forth vegetation: seed-bearing plants and fruit trees, each bearing fruit with seed according to its kind.” And it was so.
+\N 然后上帝说，“让大地生出植被：结种子的植物和结带种子果实的果树，各按其类。”而它就如此。
+% The earth produced vegetation: seed-bearing plants according to their kinds and trees bearing fruit with seed according to their kinds. And God saw that it was good.
+\N 大地产出植被：结种子的植物按它们的种类，而结带种子的果实的树按它们的种类。而上帝见它是善的。
+% And there was evening, and there was morning—the third day.
+\N 于是有夜晚，又有早晨---这是第三日。
 	
 \thispagestyle{empty}
 \newpage
