--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -68,7 +68,7 @@
 \newpage
 
 % Genesis 1
-\section*{第一章}
+\section{第一章}
 
 % The Creation
 
@@ -82,9 +82,9 @@
 % And God said, “Let there be light,” and there was light.
 \N 而上帝说，“让那有光”，就有了光。
 % God saw that the light was good, and he separated the light from the darkness.
-\N 上帝见那光是善的，祂就将那光从那黑暗分离。
+\N 上帝见那光是善的，祂就将光从黑暗分离。
 % God called the light “day,” and the darkness He called “night.” And there was evening, and there was morning—the first day.
-\N 上帝称那光为“昼”，而那黑暗祂称为“夜。”于是有夜晚，又有早晨---这是第一日。
+\N 上帝称那光为“白昼”，而那黑暗祂称为“黑夜。”于是有夜晚，又有早晨---这是第一日。
 
 \subsubsection*{第二日}
 % And God said, “Let there be an expanse between the waters, to separate the waters from the waters.”
@@ -105,6 +105,21 @@
 \N 大地产出植被：结种子的植物按它们的种类，而结带种子的果实的树按它们的种类。而上帝见它是善的。
 % And there was evening, and there was morning—the third day.
 \N 于是有夜晚，又有早晨---这是第三日。
+
+\subsubsection*{第四日}
+% And God said, “Let there be lights in the expanse of the sky to distinguish between the day and the night, and let them be signs to mark the seasons and days and years.
+\N 而上帝说，“让那有光体在天空的穹苍中，以在白昼和黑夜之间作区别，并让它们成为标明季节、日子、年岁的记号。
+% And let them serve as lights in the expanse of the sky to shine upon the earth.” And it was so.
+\N 并让它们在天空的穹苍中充当光体，以照耀在大地之上。”而它就如此。
+% God made two great lights: the greater light to rule the day and the lesser light to rule the night. And He made the stars as well.
+\N 上帝制造了两个巨大光体：较大的光体统管白昼而较小的光体统管黑夜。而祂夜制造了星辰。
+% God set these lights in the expanse of the sky to shine upon the earth,
+\N 上帝将这些光体安置在天空的穹苍中，照耀在大地之上，
+% to preside over the day and the night, and to separate the light from the darkness. And God saw that it was good.
+\N 掌管白昼和黑夜，并将光从黑暗分离。而上帝见它是善的。
+% And there was evening, and there was morning—the fourth day.
+\N 于是有夜晚，又有早晨---这是第四日。
+
 	
 \thispagestyle{empty}
 \newpage
