--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -73,28 +73,32 @@
 % The Creation
 
 \subsection*{创世}
+
 % In the beginning God created the heavens and the earth.
 \N 起初上帝创造诸天和地。
 % Now the earth was formless and void, and darkness was over the surface of the deep. And the Spirit of God was hovering over the surface of the waters.
 \N 现在地是混沌空虚的，黑暗在深渊的表面之上，而上帝的圣灵在诸水上盘旋着。
 
 \subsubsection*{第一日}
+
 % And God said, “Let there be light,” and there was light.
 \N 而上帝说，“让那有光”，就有了光。
 % God saw that the light was good, and he separated the light from the darkness.
 \N 上帝见那光是善的，祂就将光从黑暗分离。
 % God called the light “day,” and the darkness He called “night.” And there was evening, and there was morning—the first day.
-\N 上帝称那光为“白昼”，而那黑暗祂称为“黑夜。”于是有夜晚，又有早晨---这是第一日。
+\N 上帝称那光为“白昼”，而那黑暗祂称为“黑夜。”然后有夜晚，又有早晨---这是第一日。
 
 \subsubsection*{第二日}
+
 % And God said, “Let there be an expanse between the waters, to separate the waters from the waters.”
 \N 而上帝说，“让那诸水之间有穹苍将水和水分离。”
 % So God made the expanse and separated the waters beneath it from the waters above. And it was so.
 \N 所以上帝制造那穹苍并将它之下的诸水与之上的诸水分离。而它就如此。
 % God called the expanse “sky.” And there was evening, and there was morning—the second day.
-\N 上帝称穹苍为“天空。”于是有夜晚，又有早晨---这是第二日。
+\N 上帝称穹苍为“天空。”然后有夜晚，又有早晨---这是第二日。
 
 \subsubsection*{第三日}
+
 % And God said, “Let the waters under the sky be gathered into one place, so that the dry land may appear.” And it was so.
 \N 而上帝说，“让天空之下的诸水被聚集到一个地方，以使陆地能显现。”而它就如此。
 % God called the dry land “earth,” and the gathering of waters He called “seas.” And God saw that it was good.
@@ -102,9 +106,9 @@
 % Then God said, “Let the earth bring forth vegetation: seed-bearing plants and fruit trees, each bearing fruit with seed according to its kind.” And it was so.
 \N 然后上帝说，“让大地生出植被：结种子的植物和结带种子果实的果树，各按其类。”而它就如此。
 % The earth produced vegetation: seed-bearing plants according to their kinds and trees bearing fruit with seed according to their kinds. And God saw that it was good.
-\N 大地产出植被：结种子的植物按它们的种类，而结带种子的果实的树按它们的种类。而上帝见它是善的。
+\N 大地产出植被：结种子的植物各从其类，而结带种子的果实的树各从其类。而上帝见它是善的。
 % And there was evening, and there was morning—the third day.
-\N 于是有夜晚，又有早晨---这是第三日。
+\N 然后有夜晚，又有早晨---这是第三日。
 
 \subsubsection*{第四日}
 % And God said, “Let there be lights in the expanse of the sky to distinguish between the day and the night, and let them be signs to mark the seasons and days and years.
@@ -112,13 +116,24 @@
 % And let them serve as lights in the expanse of the sky to shine upon the earth.” And it was so.
 \N 并让它们在天空的穹苍中充当光体，以照耀在大地之上。”而它就如此。
 % God made two great lights: the greater light to rule the day and the lesser light to rule the night. And He made the stars as well.
-\N 上帝制造了两个巨大光体：较大的光体统管白昼而较小的光体统管黑夜。而祂夜制造了星辰。
+\N 上帝制造了两个巨大的光体：较大的光体统管白昼而较小的光体统管黑夜。而祂夜制造了星辰。
 % God set these lights in the expanse of the sky to shine upon the earth,
 \N 上帝将这些光体安置在天空的穹苍中，照耀在大地之上，
 % to preside over the day and the night, and to separate the light from the darkness. And God saw that it was good.
 \N 掌管白昼和黑夜，并将光从黑暗分离。而上帝见它是善的。
 % And there was evening, and there was morning—the fourth day.
-\N 于是有夜晚，又有早晨---这是第四日。
+\N 然后有夜晚，又有早晨---这是第四日。
+
+\subsubsection*{第五日}
+
+% And God said, “Let the waters teem with living creatures, and let birds fly above the earth in the open expanse of the sky.”
+\N 而上帝说，“让诸水以生灵充盈，并让鸟类飞翔大地之上在天空开阔的穹苍中。”
+% So God created the great sea creatures and every living thing that moves, with which the waters teemed according to their kinds, and every winged bird after its kind. And God saw that it was good.
+\N 所以上帝创造了巨大的海洋生物和每个活动的活物，诸水以它们充盈各从其类，并创造了每个翼鸟，各从其类。而上帝见它是善的。
+% Then God blessed them and said, “Be fruitful and multiply and fill the waters of the seas, and let birds multiply on the earth.”
+\N 于是上帝祝福它们并说，“要富有果实、倍增并充满海洋的诸水，并让鸟类在地上倍增。”
+% And there was evening, and there was morning—the fifth day.
+\N 然后有夜晚，又有早晨---这是第五日。
 
 	
 \thispagestyle{empty}
