--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -100,9 +100,9 @@
 \subsubsection*{第三日}
 
 % And God said, “Let the waters under the sky be gathered into one place, so that the dry land may appear.” And it was so.
-\N 而上帝说，“让天空之下的诸水被聚集到一个地方，以使陆地能显现。”而它就如此。
+\N 而上帝说，“让天空之下的诸水被聚集到一个地方，以使旱地能显现。”而它就如此。
 % God called the dry land “earth,” and the gathering of waters He called “seas.” And God saw that it was good.
-\N 上帝称那陆地为“大地”，而诸水聚集处祂称为“海洋。”而上帝见它是善的。
+\N 上帝称那旱地为“大地”，而诸水聚集处祂称为“海洋。”而上帝见它是善的。
 % Then God said, “Let the earth bring forth vegetation: seed-bearing plants and fruit trees, each bearing fruit with seed according to its kind.” And it was so.
 \N 然后上帝说，“让大地生出植被：结种子的植物和结带种子果实的果树，各按其类。”而它就如此。
 % The earth produced vegetation: seed-bearing plants according to their kinds and trees bearing fruit with seed according to their kinds. And God saw that it was good.
@@ -134,6 +134,25 @@
 \N 于是上帝祝福它们并说，“要富有果实、倍增并充满海洋的诸水，并让鸟类在地上倍增。”
 % And there was evening, and there was morning—the fifth day.
 \N 然后有夜晚，又有早晨---这是第五日。
+
+\subsubsection*{第六日}
+
+% And God said, “Let the earth bring forth living creatures according to their kinds: livestock, land crawlers, and beasts of the earth according to their kinds.” And it was so.
+\N 而上帝说，“让大地生出生灵各从其类：牲畜、陆地爬行动物以及地上的走兽，各从其类。”而它就如此。
+% God made the beasts of the earth according to their kinds, the livestock according to their kinds, and everything that crawls upon the earth according to its kind. And God saw that it was good.
+\N 上帝制造地上的走兽各从其类，牲畜各从其类，以及在地上爬行的一切各从其类。而上帝见它是善的。
+% Then God said, “Let Us make man in Our image, after Our likeness, to rule over the fish of the sea and the birds of the air, over the livestock, and over all the earth itself and every creature that crawls upon it.”
+\N 然后上帝说：“让我们依我们的形象，照我们的样子制造人，以统治海里的鱼和空中的鸟，统治牲畜，并统治全地本身以及每个在其上爬行的生物。”
+% So God created man in His own image; in the image of God He created him; male and female He created them.
+\N 所以上帝照祂自身的形象创造了人，依上帝的形象祂创造了他；祂创造了他们，男性和女性。
+% God blessed them and said to them, “Be fruitful and multiply, and fill the earth and subdue it; rule over the fish of the sea and the birds of the air and every creature that crawls upon the earth.”
+\N 上帝祝福他们并对他们说：“要富有果实并倍增，而充满大地并制伏它；统治海里的鱼、空中的鸟、以及在地面爬行的每个生物。”
+% Then God said, “Behold, I have given you every seed-bearing plant on the face of all the earth, and every tree whose fruit contains seed. They will be yours for food.
+\N 然后上帝说，“看啊，我已赐给你在全地面上的结种子的每个植物，和包含种子果实的每颗树。它们将成为你们的食物。
+% And to every beast of the earth and every bird of the air and every creature that crawls upon the earth—everything that has the breath of life in it—I have given every green plant for food.” And it was so.
+\N 而对地上每个走兽和空中每只鸟以及每个在地上爬行的生物---一切其中有生命气息的---我已将每个绿植赐为食物。”而它就如此。
+% And God looked upon all that He had made, and indeed, it was very good. And there was evening, and there was morning—the sixth day.
+\N 而上帝看向祂已制造的所有，而的确，它是甚善的。然后有夜晚，又有早晨---这是第六日。
 
 	
 \thispagestyle{empty}
