--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -154,6 +154,19 @@
 % And God looked upon all that He had made, and indeed, it was very good. And there was evening, and there was morning—the sixth day.
 \N 而上帝看向祂已制造的所有，而的确，它是甚善的。然后有夜晚，又有早晨---这是第六日。
 
+% Genesis 2
+\section{第二章}
+
+% The Seventh Day
+\subsection*{第七日}
+
+% Thus the heavens and the earth were completed in all their vast array.
+\N 因此诸天和地被完备在所有它们浩瀚的阵列中。
+% And by the seventh day God had finished the work He had been doing; so on that day He rested from all His work.
+\N 而到第七日，上帝已结束祂已在做的工作；因此，在第七日，祂从祂所有的工作中安息了。
+% Then God blessed the seventh day and sanctified it, because on that day He rested from all the work of creation that He had accomplished.
+\N 于是上帝祝福第七日并使它神圣，因为在那天，祂从祂已成就的所有创造之工中安息了。
+
 	
 \thispagestyle{empty}
 \newpage
