--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -165,7 +165,7 @@
 % And by the seventh day God had finished the work He had been doing; so on that day He rested from all His work.
 \N 而到第七日，上帝已结束祂已在做的工作；因此，在第七日，祂从祂所有的工作中安息了。
 % Then God blessed the seventh day and sanctified it, because on that day He rested from all the work of creation that He had accomplished.
-\N 于是上帝祝福第七日并使它神圣，因为在那天，祂从祂已成就的所有创造之工中安息了。
+\N 于是上帝祝福第七日并使它圣洁，因为在那天，祂从祂已成就的所有创造之工中安息了。
 
 	
 \thispagestyle{empty}
