--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -118,7 +118,7 @@
 % God made two great lights: the greater light to rule the day and the lesser light to rule the night. And He made the stars as well.
 \N 上帝制造了两个巨大的光体：较大的光体统管白昼而较小的光体统管黑夜。而祂夜制造了星辰。
 % God set these lights in the expanse of the sky to shine upon the earth,
-\N 上帝将这些光体安置在天空的穹苍中，照耀在大地之上，
+\N 上帝将这些光体设置在天空的穹苍中，照耀在大地之上，
 % to preside over the day and the night, and to separate the light from the darkness. And God saw that it was good.
 \N 掌管白昼和黑夜，并将光从黑暗分离。而上帝见它是善的。
 % And there was evening, and there was morning—the fourth day.
@@ -146,9 +146,9 @@
 % So God created man in His own image; in the image of God He created him; male and female He created them.
 \N 所以上帝照祂自身的形象创造了人，依上帝的形象祂创造了他；祂创造了他们，男性和女性。
 % God blessed them and said to them, “Be fruitful and multiply, and fill the earth and subdue it; rule over the fish of the sea and the birds of the air and every creature that crawls upon the earth.”
-\N 上帝祝福他们并对他们说：“要富有果实并倍增，而充满大地并制伏它；统治海里的鱼、空中的鸟、以及在地面爬行的每个生物。”
+\N 上帝祝福他们并对他们说：“要富有果实并倍增，而充满大地并制伏它；统治海里的鱼、空中的鸟、以及在地上爬行的每个生物。”
 % Then God said, “Behold, I have given you every seed-bearing plant on the face of all the earth, and every tree whose fruit contains seed. They will be yours for food.
-\N 然后上帝说，“看啊，我已赐给你在全地面上的结种子的每个植物，和包含种子果实的每颗树。它们将成为你们的食物。
+\N 然后上帝说，“看啊，我已赐给你在全地表上的结种子的每个植物，和包含种子果实的每颗树。它们将成为你们的食物。
 % And to every beast of the earth and every bird of the air and every creature that crawls upon the earth—everything that has the breath of life in it—I have given every green plant for food.” And it was so.
 \N 而对地上每个走兽和空中每只鸟以及每个在地上爬行的生物---一切其中有生命气息的---我已将每个绿植赐为食物。”而它就如此。
 % And God looked upon all that He had made, and indeed, it was very good. And there was evening, and there was morning—the sixth day.
@@ -166,6 +166,32 @@
 \N 而到第七日，上帝已结束祂已在做的工作；因此，在第七日，祂从祂所有的工作中安息了。
 % Then God blessed the seventh day and sanctified it, because on that day He rested from all the work of creation that He had accomplished.
 \N 于是上帝祝福第七日并使它圣洁，因为在那天，祂从祂已成就的所有创造之工中安息了。
+
+% Man and Woman in the Garden
+\subsection*{园子中的男人和女人}
+
+% This is the account of the heavens and the earth when they were created, in the day that the LORD God made them.
+\N 这是诸天和地在它们被造时，在耶和华上帝制造它们的那日的记述。
+% Now no shrub of the field had yet appeared on the earth, nor had any plant of the field sprouted, for the LORD God had not yet sent rain upon the earth, and there was no man to cultivate the ground.
+\N 现在田野的灌木未曾在地上显现，田野的植物也还未曾发芽，因为耶和华上帝未曾送雨到地上，也没有人耕种地面，
+% But springs welled up from the earth and watered the whole surface of the ground.
+\N 但泉水从大地涌出并浇灌地面的整个表面。
+% Then the LORD God formed a man from the dust of the ground and breathed into his nostrils the breath of life, and the man became a living being.
+\N 于是耶和华上帝从地面的尘土中塑造了一个人并将生命的气息吐息进他的鼻孔，那人就成为了一个生命体。
+% And the LORD God planted a garden in Eden, in the east, where He placed the man He had formed.
+\N 而耶和华上帝在东方的伊甸中培植了一个园子，祂将祂已塑造的那人安置在那里。
+% Out of the ground the LORD God gave growth to every tree that is pleasing to the eye and good for food. And in the middle of the garden were the tree of life and the tree of the knowledge of good and evil.
+\N 耶和华上帝使每颗树长出地面---那些悦目而宜为食物的树。而在园子的中央是生命树和分辨善恶的树。
+% Now a river flowed out of Eden to water the garden, and from there it branched into four headwaters:
+\N 现在一条浇灌园子的河从伊甸流出，而从那里它分支成四个水源：
+% The name of the first river is the Pishon; it winds through the whole land of Havilah, where there is gold.
+\N 第一条河的名字是比逊；它蜿蜒穿过哈腓拉整个土地，而那里有金子。
+% And the gold of that land is pure, and bdellium and onyx are found there.
+\N 而那土地的金子是纯的，芳香树脂和玛瑙也在那里被发现。
+% The name of the second river is the Gihon; it winds through the whole land of Cush.
+\N 第二条河的名字是基训；它蜿蜒穿过古实整个土地。
+% The name of the third river is the Tigris; it runs along the east side of Assyria. And the fourth river is the Euphrates.
+\N 第三条河的名字是底格里斯；它沿着亚述的东侧流淌。而第四条河是幼发拉底。
 
 	
 \thispagestyle{empty}
