--- a/source/WCF.tex
+++ b/source/WCF.tex
@@ -852,7 +852,7 @@
 	% Beside this law written in their hearts, they received a command, not to eat of the tree of the knowledge of good and evil;
 	除这刻在他们内心的律法之外，他们还领受了一条命令：不要以分辨善恶树为食；
 	\footnote {
-		\href{https://biblehub.com/genesis/2-17.htm}{创2:17} 但你决不能以分辨善恶树为食，因为当你以它为食，你将肯定死。
+		\href{https://biblehub.com/genesis/2-17.htm}{创2:17} 但你决不能以分辨善恶树为食；因为在你吃它的那日，你肯定会死。”
 		\href{https://biblehub.com/genesis/3-8.htm}{3:8} 然后在天转凉时那人正在园子里行走时，他和他的妻子听见耶和华上帝的声音，而他们在园子的树丛中向耶和华上帝隐藏。
 		\href{https://biblehub.com/genesis/3-9.htm}{9} 但耶和华上帝向那人呼唤：“你在哪里？”
 		\href{https://biblehub.com/genesis/3-10.htm}{10} 他回答：“我在园子里听见了祢，而我害怕因为我裸露着；所以我躲藏了。”
@@ -1141,7 +1141,7 @@
 	% and so became dead in sin,
 	而因此在罪恶中成了死人，
 	\footnote {
-		\href{https://biblehub.com/genesis/2-17.htm}{创2:17} 但你决不能以分辨善恶树为食，因为当你以它为食，你将肯定死。
+		\href{https://biblehub.com/genesis/2-17.htm}{创2:17} 但你决不能以分辨善恶树为食；因为在你吃它的那日，你肯定会死。”
 		\href{https://biblehub.com/ephesians/2-1.htm}{弗2:1} 至于你们，你们在你们的违犯和罪恶中死了，
 	}
 	% and wholly defiled in all the parts and faculties of soul and body.
@@ -1168,7 +1168,7 @@
 		\href{https://biblehub.com/genesis/1-28.htm}{28} 上帝祝福他们并对他们说：“要富有果实，并在数目上增长；充满大地并制伏它。统治海中的鱼，天上的鸟，并统治在地面活动的每一个活物。”
 		% \href{https://biblehub.com/genesis/2-10.htm}{2:10} 一条浇灌园子的河从伊甸流出；从那里它被分成四个水源。
         \href{https://biblehub.com/genesis/2-16.htm}{2:16} 而耶和华上帝命令那人：“你可自由地以园子里任何树为食；
-		\href{https://biblehub.com/genesis/2-17.htm}{17} 但你决不能以分辨善恶树为食，因为当你以它为食，你将肯定死。
+		\href{https://biblehub.com/genesis/2-17.htm}{17} 但你决不能以分辨善恶树为食，因为当你以它为食，你将肯定死。”
 		\href{https://biblehub.com/acts/17-26.htm}{徒17:26} 祂从一人制造了万邦，使他们会居住在全地上；祂标明了历史上他们指定的时间和他们土地的疆界。
 		\href{https://biblehub.com/romans/5-12.htm}{罗5:12} 因此，正如罪恶借着一人进入世界，而死亡借着罪恶，死亡就以这种方法来到所有族民，因为所有人都犯了罪---
 		\href{https://biblehub.com/romans/5-15.htm}{15} 但这恩赐不像那悖逆。因为如果众人由那一人的悖逆死了，那么就有更多上帝的恩典和那由耶稣基督这一人的恩典而来的恩赐充溢到众人！
@@ -1334,7 +1334,7 @@
 	% upon condition of perfect and personal obedience.
 	条件为完美且个人的顺服。
 	\footnote {
-		\href{https://biblehub.com/genesis/2-17.htm}{创2:17} 但你决不能以分辨善恶树为食，因为当你以它为食，你将肯定死。
+		\href{https://biblehub.com/genesis/2-17.htm}{创2:17} 但你决不能以分辨善恶树为食；因为在你吃它的那日，你肯定会死。”
 		\href{https://biblehub.com/galatians/3-10.htm}{加3:10} 因为所有依靠律法的功劳的人都在咒诅之下，如经上所记：“任何不持续做律法书中所记的一切的，都被咒诅。”
 	}
 
@@ -1831,7 +1831,7 @@
 	但却是易变地，以致他可能从它堕落。
 	\footnote {
 		\href{https://biblehub.com/genesis/2-16.htm}{创2:16} 而耶和华上帝命令那人：“你可自由地以园子里任何树为食；
-		\href{https://biblehub.com/genesis/2-17.htm}{17} 但你决不能以分辨善恶树为食，因为当你以它为食，你将肯定死。
+		\href{https://biblehub.com/genesis/2-17.htm}{17} 但你决不能以分辨善恶树为食；因为在你吃它的那日，你肯定会死。”
 		\href{https://biblehub.com/genesis/3-6.htm}{创3:6} 当这女人看见这树上的果实好作食物，又使眼睛愉悦，而且也对获得智慧诱人，她取了一些并吃了它。她也将一些给了与她一同的丈夫，而他也吃了它。
 	}
 
@@ -3230,7 +3230,7 @@
 	\footnote {
 		\href{https://biblehub.com/genesis/1-26.htm}{创1:26} 然后上帝说：“让我们照我们的形象，照我们的样子制造人类，以致他们能统治海里的鱼，天空的鸟，统治牲畜和所有野兽，并统治所有在地面活动的受造物。”
 		\href{https://biblehub.com/genesis/1-27.htm}{27} 所以上帝照祂自身的形象创造了人类，照上帝的形象祂创造了他们；祂创造了他们，男人和女人。
-		\href{https://biblehub.com/genesis/2-17.htm}{2:17} 但你决不能以分辨善恶树为食，因为当你以它为食，你将肯定死。
+		\href{https://biblehub.com/genesis/2-17.htm}{2:17} 但你决不能以分辨善恶树为食；因为在你吃它的那日，你肯定会死。”
 		\href{https://biblehub.com/romans/2-14.htm}{罗2:14} （的确，当没有律法的外邦人，由本性行被律法要求的事时，尽管他们没有律法，他们就是对他们自己的一种律法。
 		\href{https://biblehub.com/romans/2-15.htm}{15} 他们表明律法的要求被刻在他们心上，他们的良心也在担任证人，而且他们的思想有时控告它们，而其它时候甚至捍卫它们。）
 		\href{https://biblehub.com/romans/10-5.htm}{10:5} 对靠律法的正义摩西这样写到：“行这些事的人将以它们为生。”
@@ -4333,7 +4333,7 @@
 % Marriage was ordained for the mutual help of husband and wife,
 \N 婚姻被按立为丈夫和妻子的互相帮助，
 	\footnote {
-		\href{https://biblehub.com/genesis/2-18.htm}{创2:18} 耶和华上帝说：“孤独对那人不好。我会为他造一个合适的帮手。
+		\href{https://biblehub.com/genesis/2-18.htm}{创2:18} 耶和华上帝还说：“孤独对那人不好。我会为他造一个合适的帮手。”
 	}
 	% for the increase of mankind with a legitimate issue, and of the Church with an holy seed;
 	为人类的增长带来婚生子嗣，并为教会的增长带来神圣苗裔；
