--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -20,8 +20,9 @@
 \renewcommand{\abstractname}{\Large\textbf{绪言}}
 \newcounter{parnum}[section]
 \newcommand{\N}{%
-   \noindent\refstepcounter{parnum}%
-    \makebox[1em][l]{\small{\arabic{parnum}}}}
+    \refstepcounter{parnum}%
+    \makebox[0.7em][l]{\small{\arabic{parnum}}}
+    }
 % Use a generous paragraph indent so numbers can be fit inside the
 % indentation space.
 \setlength{\parindent}{2em}
@@ -95,7 +96,9 @@
 % So God made the expanse and separated the waters beneath it from the waters above. And it was so.
 \N 所以上帝制造那穹苍并将它之下的诸水与之上的诸水分离。而它就如此。
 % God called the expanse “sky.” And there was evening, and there was morning—the second day.
-\N 上帝称穹苍为“天空。”然后有夜晚，又有早晨---这是第二日。
+\N 上帝称穹苍为“天空。”
+
+然后有夜晚，又有早晨---这是第二日。
 
 \subsubsection*{第三日}
 
@@ -103,10 +106,12 @@
 \N 而上帝说，“让天空之下的诸水被聚集到一个地方，以使旱地能显现。”而它就如此。
 % God called the dry land “earth,” and the gathering of waters He called “seas.” And God saw that it was good.
 \N 上帝称那旱地为“大地”，而诸水聚集处祂称为“海洋。”而上帝见它是善的。
+
 % Then God said, “Let the earth bring forth vegetation: seed-bearing plants and fruit trees, each bearing fruit with seed according to its kind.” And it was so.
 \N 然后上帝说，“让大地生出植被：结种子的植物和结带种子果实的果树，各按其类。”而它就如此。
 % The earth produced vegetation: seed-bearing plants according to their kinds and trees bearing fruit with seed according to their kinds. And God saw that it was good.
 \N 大地产出植被：结种子的植物各从其类，而结带种子的果实的树各从其类。而上帝见它是善的。
+
 % And there was evening, and there was morning—the third day.
 \N 然后有夜晚，又有早晨---这是第三日。
 
@@ -115,12 +120,14 @@
 \N 而上帝说，“让那有光体在天空的穹苍中，以在白昼和黑夜之间作区别，并让它们成为标明季节、日子、年岁的记号。
 % And let them serve as lights in the expanse of the sky to shine upon the earth.” And it was so.
 \N 并让它们在天空的穹苍中充当光体，以照耀在大地之上。”而它就如此。
+
 % God made two great lights: the greater light to rule the day and the lesser light to rule the night. And He made the stars as well.
 \N 上帝制造了两个巨大的光体：较大的光体统管白昼而较小的光体统管黑夜。而祂夜制造了星辰。
 % God set these lights in the expanse of the sky to shine upon the earth,
 \N 上帝将这些光体设置在天空的穹苍中，照耀在大地之上，
 % to preside over the day and the night, and to separate the light from the darkness. And God saw that it was good.
 \N 掌管白昼和黑夜，并将光从黑暗分离。而上帝见它是善的。
+
 % And there was evening, and there was morning—the fourth day.
 \N 然后有夜晚，又有早晨---这是第四日。
 
@@ -130,8 +137,10 @@
 \N 而上帝说，“让诸水以生灵充盈，并让鸟类飞翔大地之上在天空开阔的穹苍中。”
 % So God created the great sea creatures and every living thing that moves, with which the waters teemed according to their kinds, and every winged bird after its kind. And God saw that it was good.
 \N 所以上帝创造了巨大的海洋生物和每个活动的活物，诸水以它们充盈各从其类，并创造了每个翼鸟，各从其类。而上帝见它是善的。
+
 % Then God blessed them and said, “Be fruitful and multiply and fill the waters of the seas, and let birds multiply on the earth.”
 \N 于是上帝祝福它们并说，“要富有果实、倍增并充满海洋的诸水，并让鸟类在地上倍增。”
+
 % And there was evening, and there was morning—the fifth day.
 \N 然后有夜晚，又有早晨---这是第五日。
 
@@ -141,18 +150,25 @@
 \N 而上帝说，“让大地生出生灵各从其类：牲畜、陆地爬行动物以及地上的走兽，各从其类。”而它就如此。
 % God made the beasts of the earth according to their kinds, the livestock according to their kinds, and everything that crawls upon the earth according to its kind. And God saw that it was good.
 \N 上帝制造地上的走兽各从其类，牲畜各从其类，以及在地上爬行的一切各从其类。而上帝见它是善的。
+
 % Then God said, “Let Us make man in Our image, after Our likeness, to rule over the fish of the sea and the birds of the air, over the livestock, and over all the earth itself and every creature that crawls upon it.”
 \N 然后上帝说：“让我们依我们的形象，照我们的样子制造人，以统治海里的鱼和空中的鸟，统治牲畜，并统治全地本身以及每个在其上爬行的生物。”
+
 % So God created man in His own image; in the image of God He created him; male and female He created them.
 \N 所以上帝照祂自身的形象创造了人，依上帝的形象祂创造了他；祂创造了他们，男性和女性。
+
 % God blessed them and said to them, “Be fruitful and multiply, and fill the earth and subdue it; rule over the fish of the sea and the birds of the air and every creature that crawls upon the earth.”
 \N 上帝祝福他们并对他们说：“要富有果实并倍增，而充满大地并制伏它；统治海里的鱼、空中的鸟、以及在地上爬行的每个生物。”
+
 % Then God said, “Behold, I have given you every seed-bearing plant on the face of all the earth, and every tree whose fruit contains seed. They will be yours for food.
 \N 然后上帝说，“看啊，我已赐给你在全地表上的结种子的每个植物，和包含种子果实的每颗树。它们将成为你们的食物。
 % And to every beast of the earth and every bird of the air and every creature that crawls upon the earth—everything that has the breath of life in it—I have given every green plant for food.” And it was so.
 \N 而对地上每个走兽和空中每只鸟以及每个在地上爬行的生物---一切其中有生命气息的---我已将每个绿植赐为食物。”而它就如此。
+
 % And God looked upon all that He had made, and indeed, it was very good. And there was evening, and there was morning—the sixth day.
-\N 而上帝看向祂已制造的所有，而的确，它是甚善的。然后有夜晚，又有早晨---这是第六日。
+\N 而上帝看向祂已制造的所有，而的确，它是甚善的。
+
+然后有夜晚，又有早晨---这是第六日。
 
 % Genesis 2
 \section{第二章}
@@ -164,6 +180,7 @@
 \N 因此诸天和地被完备在所有它们浩瀚的阵列中。
 % And by the seventh day God had finished the work He had been doing; so on that day He rested from all His work.
 \N 而到第七日，上帝已结束祂已在做的工作；因此，在第七日，祂从祂所有的工作中安息了。
+
 % Then God blessed the seventh day and sanctified it, because on that day He rested from all the work of creation that He had accomplished.
 \N 于是上帝祝福第七日并使它圣洁，因为在那天，祂从祂已成就的所有创造之工中安息了。
 
@@ -172,26 +189,49 @@
 
 % This is the account of the heavens and the earth when they were created, in the day that the LORD God made them.
 \N 这是诸天和地在它们被造时，在耶和华上帝制造它们的那日的记述。
+
 % Now no shrub of the field had yet appeared on the earth, nor had any plant of the field sprouted, for the LORD God had not yet sent rain upon the earth, and there was no man to cultivate the ground.
 \N 现在田野的灌木未曾在地上显现，田野的植物也还未曾发芽，因为耶和华上帝未曾送雨到地上，也没有人耕种地面，
 % But springs welled up from the earth and watered the whole surface of the ground.
 \N 但泉水从大地涌出并浇灌地面的整个表面。
+
 % Then the LORD God formed a man from the dust of the ground and breathed into his nostrils the breath of life, and the man became a living being.
-\N 于是耶和华上帝从地面的尘土中塑造了一个人并将生命的气息吐息进他的鼻孔，那人就成为了一个生命体。
+\N 然后耶和华上帝从地面的尘土中塑造了一个人并将生命的气息吐息进他的鼻孔，那人就成为了一个生命体。
+
 % And the LORD God planted a garden in Eden, in the east, where He placed the man He had formed.
 \N 而耶和华上帝在东方的伊甸中培植了一个园子，祂将祂已塑造的那人安置在那里。
 % Out of the ground the LORD God gave growth to every tree that is pleasing to the eye and good for food. And in the middle of the garden were the tree of life and the tree of the knowledge of good and evil.
 \N 耶和华上帝使每颗树长出地面---那些悦目而宜为食物的树。而在园子的中央是生命树和分辨善恶的树。
+
 % Now a river flowed out of Eden to water the garden, and from there it branched into four headwaters:
 \N 现在一条浇灌园子的河从伊甸流出，而从那里它分支成四个水源：
+
 % The name of the first river is the Pishon; it winds through the whole land of Havilah, where there is gold.
 \N 第一条河的名字是比逊；它蜿蜒穿过哈腓拉整个土地，而那里有金子。
 % And the gold of that land is pure, and bdellium and onyx are found there.
 \N 而那土地的金子是纯的，芳香树脂和玛瑙也在那里被发现。
+
 % The name of the second river is the Gihon; it winds through the whole land of Cush.
 \N 第二条河的名字是基训；它蜿蜒穿过古实整个土地。
+
 % The name of the third river is the Tigris; it runs along the east side of Assyria. And the fourth river is the Euphrates.
 \N 第三条河的名字是底格里斯；它沿着亚述的东侧流淌。而第四条河是幼发拉底。
+
+% Then the LORD God took the man and placed him in the Garden of Eden to cultivate and keep it.
+\N 然后耶和华上帝带了那人并将他安置在伊甸园中以耕种并看护它。
+
+% And the LORD God commanded him, “You may eat freely from every tree of the garden,
+\N 而耶和华上帝命令他，“你可以自由地以园子的每一颗树为食，
+% but you must not eat from the tree of the knowledge of good and evil; for in the day that you eat of it, you will surely die.”
+\N 但你决不能以分辨善恶树为食；因为在你吃它的那日，你肯定会死。”
+
+% The LORD God also said, “It is not good for the man to be alone. I will make for him a suitable helper.”
+\N 耶和华上帝还说，“孤独对那人不好。我会为他造一个合适的帮手。”
+
+% And out of the ground the LORD God formed every beast of the field and every bird of the air, and He brought them to the man to see what he would name each one. And whatever the man called each living creature, that was its name.
+\N 而耶和华上帝以土壤塑造了田野中每一只走兽和空中每一只鸟，而祂将它们带给那人而看他会给每一个取什么名。而无论那人称呼各个生灵什么，那就是它的名字。
+% The man gave names to all the livestock, to the birds of the air, and to every beast of the field. But for Adame no suitable helper was found.
+\N 那人将名字给所有牲畜、空中的鸟类，并给田野的每个走兽。但对亚当没有适合的帮手被找到。
 
 	
 \thispagestyle{empty}
