--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -87,7 +87,9 @@
 % God saw that the light was good, and he separated the light from the darkness.
 \N 上帝见那光是善的，祂就将光从黑暗分离。
 % God called the light “day,” and the darkness He called “night.” And there was evening, and there was morning—the first day.
-\N 上帝称那光为“白昼”，而那黑暗祂称为“黑夜。”然后有夜晚，又有早晨---这是第一日。
+\N 上帝称那光为“白昼”，而那黑暗祂称为“黑夜。”
+
+然后有夜晚，又有早晨---这是第一日。
 
 \subsubsection*{第二日}
 
@@ -123,6 +125,7 @@
 
 % God made two great lights: the greater light to rule the day and the lesser light to rule the night. And He made the stars as well.
 \N 上帝制造了两个巨大的光体：较大的光体统管白昼而较小的光体统管黑夜。而祂夜制造了星辰。
+
 % God set these lights in the expanse of the sky to shine upon the earth,
 \N 上帝将这些光体设置在天空的穹苍中，照耀在大地之上，
 % to preside over the day and the night, and to separate the light from the darkness. And God saw that it was good.
@@ -229,9 +232,26 @@
 \N 耶和华上帝还说，“孤独对那人不好。我会为他造一个合适的帮手。”
 
 % And out of the ground the LORD God formed every beast of the field and every bird of the air, and He brought them to the man to see what he would name each one. And whatever the man called each living creature, that was its name.
-\N 而耶和华上帝以土壤塑造了田野中每一只走兽和空中每一只鸟，而祂将它们带给那人而看他会给每一个取什么名。而无论那人称呼各个生灵什么，那就是它的名字。
+\N 而耶和华上帝以土壤塑造了田野中每一只走兽和空中每一只鸟，而祂将它们带给那人而看他会给各个取什么名。而无论那人称呼各个生灵什么，那就是它的名字。
 % The man gave names to all the livestock, to the birds of the air, and to every beast of the field. But for Adame no suitable helper was found.
 \N 那人将名字给所有牲畜、空中的鸟类，并给田野的每个走兽。但对亚当没有适合的帮手被找到。
+
+% So the LORD God caused the man to fall into a deep sleep, and while he slept, He took one of the man’s ribs and closed up the area with flesh. 
+\N 所以耶和华上帝令那人陷入沉睡，而在他睡着时，祂取了那人的一根肋骨并以肉将那地方闭合。
+% And from the rib that the LORD God had taken from the man, He made a woman and brought her to him.
+\N 而从那耶和华上帝从那人取来的肋骨，祂制造了一个女人并将她带给他。
+% And the man said: “This is now bone of my bones and flesh of my flesh; she shall be called ‘woman,’ for out of man she was taken.”
+\N 而那人说：
+
+“这正是我的骨中骨和我的肉中肉；她应该被称为‘女人，’因为她取自于男人。”
+
+% For this reason a man will leave his father and mother and be united to his wife, and they will become one flesh.
+\N 因此，一个男人会离开他的父亲和母亲并与他的妻子联合，而他们就会成为一体。
+
+% And the man and his wife were both naked, and they were not ashamed.
+\N 而那男人和他的妻子二人都是裸露的，他们却不觉羞愧。
+
+
 
 	
 \thispagestyle{empty}
