--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -249,8 +249,30 @@
 \N 因此，一个男人会离开他的父亲和母亲并与他的妻子联合，而他们就会成为一体。
 
 % And the man and his wife were both naked, and they were not ashamed.
-\N 而那男人和他的妻子二人都是裸露的，他们却不觉羞愧。
+\N 而那男人和他的妻子俩都是裸露的，他们却不觉羞愧。
 
+% Genesis 3
+\section{第三章}
+
+% The Serpent’s Deception
+\subsection*{大蛇的欺骗}
+
+% Now the serpent was more crafty than any beast of the field that the LORD God had made. And he said to the woman, “Did God really say, ‘You must not eat from any tree in the garden?’”
+\N 现在那大蛇比耶和华上帝已造的田野的任何走兽都狡黠。而他对那女人说，“上帝真的说，‘你决不能以园子中的任何树为食？’”
+
+% The woman answered the serpent, “We may eat the fruit of the trees of the garden,
+\N 那女人回答那大蛇，“我们可以吃园子中树的果实，
+% but about the fruit of the tree in the middle of the garden, God has said, ‘You must not eat of it or touch it, or you will die.’”
+\N 但对于在园子中央的树的果实，上帝已说，‘你决不能吃它或摸它，否则你会死。’”
+
+% “You will not surely die,” the serpent told the woman. “For God knows that in the day you eat of it, your eyes will be opened and you will be like God, knowing good and evil.”
+\N “你不一定会死，”那大蛇告诉那女人。“因为上帝知道在你吃它的那日，你的双眼会被打开而你会像上帝一样，知道善与恶。”
+
+% When the woman saw that the tree was good for food and pleasing to the eyes, and that it was desirable for obtaining wisdom, she took the fruit and ate it. She also gave some to her husband who was with her, and he ate it.
+\N 当那女人看见那树宜为食物且悦目，而这是为获得智慧所渴望的，她就取了果实并吃了它。她也将一些给了与她一同的丈夫，而他也吃了它。
+
+% And the eyes of both of them were opened, and they knew that they were naked; so they sewed together fig leaves and made coverings for themselves.
+\N 他们俩的眼睛就都被打开了，而他们知道了他们是裸露的；所以他们把无花果叶缝在一起，而为他们自己做遮盖。
 
 
 	
