--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -269,7 +269,7 @@
 \N “你不一定会死，”那大蛇告诉那女人。“因为上帝知道在你吃它的那日，你的双眼会被打开而你会像上帝一样，知道善与恶。”
 
 % When the woman saw that the tree was good for food and pleasing to the eyes, and that it was desirable for obtaining wisdom, she took the fruit and ate it. She also gave some to her husband who was with her, and he ate it.
-\N 当那女人看见那树宜为食物且悦目，而这是为获得智慧所渴望的，她就取了果实并吃了它。她也将一些给了与她一同的丈夫，而他也吃了它。
+\N 当那女人看见那树宜为食物且悦目，而它是为获得智慧所渴望的，她就取了果实并吃了它。她也将一些给了与她一同的丈夫，而他也吃了它。
 
 % And the eyes of both of them were opened, and they knew that they were naked; so they sewed together fig leaves and made coverings for themselves.
 \N 他们俩的眼睛就都被打开了，而他们知道了他们是裸露的；所以他们把无花果叶缝在一起，而为他们自己做遮盖。
