--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -274,6 +274,8 @@
 % And the eyes of both of them were opened, and they knew that they were naked; so they sewed together fig leaves and made coverings for themselves.
 \N 他们俩的眼睛就都被打开了，而他们知道了他们是裸露的；所以他们把无花果叶缝在一起，而为他们自己做遮盖。
 
+% God Arraigns Adam and Eve
+\subsection*{上帝提讯亚当和夏娃}
 
 	
 \thispagestyle{empty}
