--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -265,8 +265,10 @@
 % but about the fruit of the tree in the middle of the garden, God has said, ‘You must not eat of it or touch it, or you will die.’”
 \N 但对于在园子中央的树的果实，上帝已说，‘你决不能吃它或摸它，否则你会死。’”
 
-% “You will not surely die,” the serpent told the woman. “For God knows that in the day you eat of it, your eyes will be opened and you will be like God, knowing good and evil.”
-\N “你不一定会死，”那大蛇告诉那女人。“因为上帝知道在你吃它的那日，你的双眼会被打开而你会像上帝一样，知道善与恶。”
+% “You will not surely die,” the serpent told the woman. 
+\N “你不一定会死，”那大蛇告诉那女人。
+% “For God knows that in the day you eat of it, your eyes will be opened and you will be like God, knowing good and evil.”
+\N “因为上帝知道在你吃它的那日，你的双眼会被打开而你会像上帝一样，知道善与恶。”
 
 % When the woman saw that the tree was good for food and pleasing to the eyes, and that it was desirable for obtaining wisdom, she took the fruit and ate it. She also gave some to her husband who was with her, and he ate it.
 \N 当那女人看见那树宜为食物且悦目，而它是为获得智慧所渴望的，她就取了果实并吃了它。她也将一些给了与她一同的丈夫，而他也吃了它。
@@ -276,6 +278,81 @@
 
 % God Arraigns Adam and Eve
 \subsection*{上帝提讯亚当和夏娃}
+
+% Then the man and his wife heard the voice of the LORD God walking in the garden in the breeze of the day, and they hid themselves from the presence of the LORD God among the trees of the garden.
+
+\N 然后在那日风凉时，那人和他的妻子听见耶和华上帝在园子里行走的声音，他们就在园子的树丛中向耶和华上帝的临在隐藏。
+
+% But the LORD God called out to the man, “Where are you?”
+\N 但耶和华上帝向那人呼唤：“你在哪里？”
+
+% “I heard Your voice in the garden,” he replied, “and I was afraid because I was naked; so I hid myself.”
+\N 他回应：“我在园子里听见了祢的声音，而我害怕因为我是裸露的；所以我躲藏了我自己。”
+
+% “Who told you that you were naked?” asked the LORD God. “Have you eaten from the tree of which I commanded you not to eat?”
+\N 而耶和华上帝问：“谁告诉你你是裸露的？难道你已以我命令了你不要吃的树为食吗？”
+
+% And the man answered, “The woman whom You gave me, she gave me fruit from the tree, and I ate it.”
+\N 而那人回答，“祢赐给我的那女人，她将果实从那树上给我，而我吃了它。”
+
+% Then the LORD God said to the woman, “What is this you have done?”
+\N 于是耶和华上帝对那女人说，“你已做的这是什么？”
+
+% “The serpent deceived me,” she replied, “and I ate.”
+她回应，“那大蛇欺骗了我，我就吃了。”
+
+% The Fate of the Serpent
+\subsection*{大蛇的定命}
+% So the LORD God said to the serpent:
+\N 所以耶和华上帝对那大蛇说：
+
+% “Because you have done this, cursed are you above all livestock and every beast of the field! On your belly will you go, and dust you will eat, all the days of your life.
+“因为你已做此，你所受咒诅在田野所有牲畜和每个走兽之上！在你生命的所有日子，你会用腹部爬行，而你会吃尘土。
+
+% And I will put enmity between you and the woman, and between your seed and her seed.
+\N 而我会在你和那女人之间，并在你的苗裔和她的苗裔之间结仇。
+
+% He will crush your head, and you will strike his heel.”
+他会击碎你的头，而你会打伤他的脚跟。”
+
+% The Punishment of Mankind
+\subsection*{人类的惩罚}
+
+% To the woman He said:
+\N 对那女人祂说：
+
+% “I will sharply increase your pain in childbirth; in pain you will bring forth children. Your desire will be for your husband, and he will rule over you.”
+“我会急剧增加你在分娩时的痛苦；你会在痛苦中生出儿女。你会渴望得到你的丈夫，而他会管治你。”
+
+% And to Adam He said:
+\N 而对亚当祂说：
+
+% “Because you have listened to the voice of your wife and have eaten from the tree of which I commanded you not to eat, cursed is the ground because of you; through toil you will eat of it all the days of your life.
+“因为你已听从你妻子的话音并已以我命令了你不要吃的树为食，地面因你受咒诅；在你生命的所有日子，借着劳苦你才会从它有吃的。
+
+% Both thorns and thistles it will yield for you, and you will eat the plants of the field.
+\N 它会为你结出荆棘和刺蓟，而你会吃田野的植物。
+
+% By the sweat of your brow you will eat your bread, until you return to the ground—because out of it were you taken. For dust you are, and to dust you shall return.”
+\N 你将由眉头的汗水吃食，直到你回归地面---因为你被取自于它。而你是尘土，也将回归尘土。”
+
+% And Adam named his wife Eve, because she would be the mother of all the living.
+\N 而亚当给他妻子取名夏娃，因为她会是众生之母。
+
+% The Expulsion from Paradise
+\subsection*{逐出乐园}
+
+% And the LORD God made garments of skin for Adam and his wife, and He clothed them.
+\N 而耶和华上帝为亚当和他的妻子造了皮的服装，并且祂为他们穿戴。
+
+% Then the LORD God said, “Behold, the man has become like one of Us, knowing good and evil. And now, lest he reach out his hand and take also from the tree of life, and eat, and live forever...”
+\N 然后耶和华上帝说，“看那，那人已成为像我们其中一个一样知道善恶。而现在，以免他伸出他的手，也从那生命树摘取并吃，就永远活着\dots”
+
+% Therefore the LORD God banished him from the Garden of Eden to work the ground from which he had been taken. 
+\N 因此耶和华上帝将他从伊甸园流放，去劳作他被取自的地面。
+% So He drove out the man and stationed cherubim on the east side of the Garden of Eden, along with a whirling sword of flame to guard the way to the tree of life.
+\N 所以祂驱走那人并在伊甸园的东侧派驻基路伯，连同旋转的火焰之剑来守卫到生命树的道路。
+
 
 	
 \thispagestyle{empty}
