--- a/source/WCF.tex
+++ b/source/WCF.tex
@@ -1345,7 +1345,7 @@
 		\href{https://biblehub.com/romans/8-3.htm}{罗8:3} 对律法无能为力去做的事---因为它被肉体削弱了---上帝由差派祂自身的儿子以罪恶肉体的样子作为赎罪祭做了。而所以祂对在肉体中的罪恶定了罪，
 		\href{https://biblehub.com/romans/3-20.htm}{3:20} 因此，在上帝的视域中，无人会由律法的功劳而被宣告为义；相反，藉着律法，我们觉知到我们的罪恶。
 		\href{https://biblehub.com/romans/3-21.htm}{21} 但现在除去律法，上帝的正义已经被揭晓了，律法和众先知也向它作证。
-		\href{https://biblehub.com/genesis/3-15.htm}{创3:15} 而我会在你和那女人之间，并在你的孩子和她的孩子之间结仇。他会击碎你的头，而你会打伤他的脚跟。
+		\href{https://biblehub.com/genesis/3-15.htm}{创3:15} 而我会在你和那女人之间，并在你的孩子和她的孩子之间结仇。他会击碎你的头，而你会打伤他的脚跟。”
 		\href{https://biblehub.com/isaiah/42-6.htm}{赛42:6} “我，耶和华，已在正义中召唤祢；我会抓住祢的手。我会保持祢，而会使祢成为一个为子民的圣约和一束为外邦人的光，
 	}
 	% commonly called the covenant of grace; wherein He freely offers unto sinners life and salvation by Jesus Christ; requiring of them faith in Him, that they may be saved,
@@ -1742,7 +1742,7 @@
 	\footnote {
 		\href{https://biblehub.com/galatians/4-4.htm}{加4:4} 但当设定的时间已完全来到，上帝差派了祂的圣子，由一个女人所生，生在律法之下，
 		\href{https://biblehub.com/galatians/4-5.htm}{5} 为救赎那些在律法之下的人，以使我们能为儿子名分领受收养。
-		\href{https://biblehub.com/genesis/3-15.htm}{创3:15} 而我会在你和那女人之间，并在你的孩子和她的孩子之间结仇。他会击碎你的头，而你会打伤他的脚跟。
+		\href{https://biblehub.com/genesis/3-15.htm}{创3:15} 而我会在你和那女人之间，并在你的孩子和她的孩子之间结仇。他会击碎你的头，而你会打伤他的脚跟。”
 		\href{https://biblehub.com/revelation/13-8.htm}{启13:8} 地上所有的居民都会敬拜这猛兽---所有那些名字未曾被写在羔羊的生命书上的，而这羔羊是从世界创造就被残杀的。
 		\href{https://biblehub.com/hebrews/13-8.htm}{来13:8} 耶稣基督昨天和今天且永远是一样的。
 	}
@@ -4477,7 +4477,7 @@
 		\href{https://biblehub.com/ezekiel/16-20.htm}{结16:20} “‘而你们带了你们为我生的儿子和女儿们而将他们作为食物献祭给偶像。你们的淫荡还不够吗？
 		\href{https://biblehub.com/ezekiel/16-21.htm}{21} 你们宰杀我的子女，并将他们献祭给偶像。
 		\href{https://biblehub.com/romans/11-16.htm}{罗11:16} 如果作为初熟果实被奉上的面团部分是神圣的，那么整个批次都是神圣的；如果根是神圣的，那么树枝也是神圣的。
-		\href{https://biblehub.com/genesis/3-15.htm}{创3:15} 而我会在你和那女人之间，并在你的孩子和她的孩子之间结仇。他会击碎你的头，而你会打伤他的脚跟。
+		\href{https://biblehub.com/genesis/3-15.htm}{创3:15} 而我会在你和那女人之间，并在你的孩子和她的孩子之间结仇。他会击碎你的头，而你会打伤他的脚跟。”
 		\href{https://biblehub.com/genesis/17-7.htm}{17:7} 我会确立我的圣约，作为我与你以及你之后的后代之间的永久之约，为要到来的世代，而成为你的上帝和在你之后的你的后代的上帝。
 	}
 	% and is the kingdom of the Lord Jesus Christ,
@@ -5198,7 +5198,7 @@
 % The bodies of men, after death, return to dust, and see corruption:
 \N 人的身体，在死后，回归尘土，且得见腐败：
 	\footnote {
-		\href{https://biblehub.com/genesis/3-19.htm}{创3:19} 你将由眉头的汗水吃食，直到你回归地面，因为你从它被取；你是为尘土，也将回归尘土。
+		\href{https://biblehub.com/genesis/3-19.htm}{创3:19} 你将由眉头的汗水吃食，直到你回归地面---因为你被取自于它。而你是尘土，也将回归尘土。”
 		\href{https://biblehub.com/acts/13-36.htm}{徒13:36} “现在当大卫已侍奉上帝在他自身世代的旨意时，他就入睡了。他与他的祖先一同被埋葬，而他的身体朽坏了。
 	}
 	% but their souls, which neither die nor sleep, having an immortal subsistence, immediately return to God who gave them:
