--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -210,12 +210,12 @@
 \N 现在一条浇灌园子的河从伊甸流出，而从那里它分支成四个水源：
 
 % The name of the first river is the Pishon; it winds through the whole land of Havilah, where there is gold.
-\N 第一条河的名字是比逊；它蜿蜒穿过哈腓拉整个土地，而那里有金子。
+\N 第一条河的名字是比逊；它蜿蜒穿过哈腓拉整个陆地，而那里有金子。
 % And the gold of that land is pure, and bdellium and onyx are found there.
-\N 而那土地的金子是纯的，芳香树脂和玛瑙也在那里被发现。
+\N 而那陆地的金子是纯的，芳香树脂和玛瑙也在那里被发现。
 
 % The name of the second river is the Gihon; it winds through the whole land of Cush.
-\N 第二条河的名字是基训；它蜿蜒穿过古实整个土地。
+\N 第二条河的名字是基训；它蜿蜒穿过古实整个陆地。
 
 % The name of the third river is the Tigris; it runs along the east side of Assyria. And the fourth river is the Euphrates.
 \N 第三条河的名字是底格里斯；它沿着亚述的东侧流淌。而第四条河是幼发拉底。
@@ -343,7 +343,7 @@
 \subsection*{逐出乐园}
 
 % And the LORD God made garments of skin for Adam and his wife, and He clothed them.
-\N 而耶和华上帝为亚当和他的妻子造了皮的服装，并且祂为他们穿戴。
+\N 而耶和华上帝为亚当和他的妻子造了兽皮的服装，并且祂为他们穿戴。
 
 % Then the LORD God said, “Behold, the man has become like one of Us, knowing good and evil. And now, lest he reach out his hand and take also from the tree of life, and eat, and live forever...”
 \N 然后耶和华上帝说，“看那，那人已成为像我们其中一个一样知道善恶。而现在，以免他伸出他的手，也从那生命树摘取并吃，就永远活着\dots”
@@ -352,6 +352,54 @@
 \N 因此耶和华上帝将他从伊甸园流放，去劳作他被取自的地面。
 % So He drove out the man and stationed cherubim on the east side of the Garden of Eden, along with a whirling sword of flame to guard the way to the tree of life.
 \N 所以祂驱走那人并在伊甸园的东侧派驻基路伯，连同旋转的火焰之剑来守卫到生命树的道路。
+
+% Genesis 4
+\section{第四章}
+
+% Cain and Abel
+\subsection*{该隐和亚伯}
+
+% And Adam had relations with his wife Eve, and she conceived and gave birth to Cain.
+\N 而亚当与他的妻子夏娃同房，她就受孕而诞生出该隐。
+
+% “With the help of the LORD I have brought forth a man,” she said.
+“靠耶和华的帮助我生出一个男人，”她说。
+
+% Later she gave birth to Cain’s brother Abel.
+\N 后来她诞生出该隐的兄弟亚伯。
+
+% Now Abel was a keeper of sheep, while Cain was a tiller of the soil.
+现在亚伯是个守护绵羊的，而该隐是个耕种土地的。
+% So in the course of time, Cain brought some of the fruit of the soil as an offering to the LORD,
+\N 所以一段时间后，该隐将土地的一些果实作为供品带给耶和华，
+% while Abel brought the best portions of the firstborn of his flock.
+\N 而亚伯带了他羊群中头生的最好的部分。
+
+% And the LORD looked with favor on Abel and his offering,
+耶和华看中了亚伯和他的供品，
+% but He had no regard for Cain and his offering. So Cain became very angry, and his countenance fell.
+\N 但祂不顾及该隐和他的供品。所以该隐变得非常愤怒，而他的脸低垂着。
+
+% “Why are you angry,” said the LORD to Cain, “and why has your countenance fallen?
+\N “你为什么愤怒，”耶和华对该隐说，“而为什么你的脸已低垂呢？
+% If you do what is right, will you not be accepted? But if you refuse to do what is right, sin is crouching at your door; it desires you, but you must master it.”
+\N 如果你做正确的事，你会不被接受吗？但如果你拒绝做正确的事，罪恶就伏在你的门口；它渴望你，但你必须掌控它。”
+
+% Then Cain said to his brother Abel, “Let us go out to the field.” And while they were in the field, Cain rose up against his brother Abel and killed him.
+\N 然后该隐对他的兄弟亚伯说，“让我们外出到野地去。”而当他们在野地里时，该隐奋起攻击他的兄弟亚伯并杀了他。
+
+% And the LORD said to Cain, “Where is your brother Abel?”
+\N 而耶和华对该隐说，“你的兄弟亚伯在哪里？”
+
+% “I do not know!” he answered. “Am I my brother’s keeper?”
+“我不知道！”他回答，“难道我是我兄弟的守护者吗？”
+
+% “What have you done?” replied the LORD. “The voice of your brother’s blood cries out to Me from the ground.
+\N “你已做了什么？”耶和华回应。“你兄弟的血的话音从地面向我哭嚎。
+% Now you are cursed and banished from the ground, which has opened its mouth to receive your brother’s blood from your hand.
+\N 现在你被咒诅并从地面流放，因为它已张开它的口从你手中接收你兄弟的血。
+% When you till the ground, it will no longer yield its produce to you. You will be a fugitive and a wanderer on the earth.”
+\N 当你耕作地面时，它不再会为你结出它的产出。你会在地上成为一个逃亡者和一个流浪者。”
 
 
 	
