--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -360,13 +360,13 @@
 \subsection*{该隐和亚伯}
 
 % And Adam had relations with his wife Eve, and she conceived and gave birth to Cain.
-\N 而亚当与他的妻子夏娃同房，她就受孕而诞生出该隐。
+\N 而亚当与他的妻子夏娃同房，她就受孕而生下该隐。
 
 % “With the help of the LORD I have brought forth a man,” she said.
 “靠耶和华的帮助我生出一个男人，”她说。
 
 % Later she gave birth to Cain’s brother Abel.
-\N 后来她诞生出该隐的兄弟亚伯。
+\N 后来她生下该隐的兄弟亚伯。
 
 % Now Abel was a keeper of sheep, while Cain was a tiller of the soil.
 现在亚伯是个守护绵羊的，而该隐是个耕种土地的。
@@ -386,7 +386,7 @@
 \N 如果你做正确的事，你会不被接受吗？但如果你拒绝做正确的事，罪恶就伏在你的门口；它渴望你，但你必须掌控它。”
 
 % Then Cain said to his brother Abel, “Let us go out to the field.” And while they were in the field, Cain rose up against his brother Abel and killed him.
-\N 然后该隐对他的兄弟亚伯说，“让我们外出到野地去。”而当他们在野地里时，该隐奋起攻击他的兄弟亚伯并杀了他。
+\N 然后该隐对他的兄弟亚伯说，“让我们外出到野外去。”而当他们在野外时，该隐奋起攻击他的兄弟亚伯并杀了他。
 
 % And the LORD said to Cain, “Where is your brother Abel?”
 \N 而耶和华对该隐说，“你的兄弟亚伯在哪里？”
@@ -401,7 +401,58 @@
 % When you till the ground, it will no longer yield its produce to you. You will be a fugitive and a wanderer on the earth.”
 \N 当你耕作地面时，它不再会为你结出它的产出。你会在地上成为一个逃亡者和一个流浪者。”
 
+% But Cain said to the LORD, “My punishment is greater than I can bear. 
+\N 但该隐对耶和华说，“我的惩罚大过我能承受的。
+% Behold, this day You have driven me from the face of the earth, and from Your face I will be hidden; I will be a fugitive and a wanderer on the earth, and whoever finds me will kill me.”
+\N 看那，今日祢已将我从地表驱走，而我会从祢的面隐藏；我你会在地上成为一个逃亡者和一个流浪者，而无论谁找到我都会杀我。”
 
+% “Not so!” replied the LORD. “If anyone slays Cain, then Cain will be avenged sevenfold.” And the LORD placed a mark on Cain, so that no one who found him would kill him.
+\N “并非如此！”耶和华回应。“如果任何人残杀该隐，那么该隐会得七重复仇。”而耶和华将一个标记放置在该隐上，使得找到他的无人会杀他。
+
+% So Cain went out from the presence of the LORD and settled in the land of Nod, east of Eden.
+\N 所以该隐从耶和华的临在走开，而在伊甸之东、挪得之地
+    \footnote {
+		\textit{挪得}意思是\textit{流浪}。
+	}
+居住。
+
+% The Descendants of Cain
+\subsection*{该隐的后代}
+
+% And Cain had relations with his wife, and she conceived and gave birth to Enoch. Then Cain built a city and named it after his son Enoch.
+\N 而该隐和他的妻子同房，她就受孕而生下以诺。然后该隐建造了一座城市并以他儿子以诺为它取名。
+
+% Now to Enoch was born Irad, and Irad was the father of Mehujael, and Mehujael was the father of Methusael, and Methusael was the father of Lamech.
+\N 现在由以诺出生了以拿，而以拿是米户雅利的父亲，而米户雅利是玛土撒利的父亲，而玛土撒利是拉麦的父亲。
+% And Lamech married two women, one named Adah and the other Zillah.
+\N 而拉麦娶了两个女人，一个名叫亚大而另一个叫洗拉。
+
+% Adah gave birth to Jabal; he was the father of those who dwell in tents and raise livestock.
+\N 亚大生下雅八；他是那些栖居在帐篷中、饲养牲畜的人之父。
+% And his brother’s name was Jubal; he was the father of all who play the harp and flute.
+\N 而他兄弟的名字是犹八；他是所有演奏琴笛的人之父。
+
+% And Zillah gave birth to Tubal-cain, a forger of every implement of bronze and iron. And the sister of Tubal-cain was Naamah.
+\N 而洗拉生下土八该隐，一个每件铜铁用具的锻造者。而土八该隐的姊妹是拿玛。
+
+% Then Lamech said to his wives:
+\N 然后拉麦对他的妻子们说：
+
+% “Adah and Zillah, hear my voice; wives of Lamech, listen to my speech. For I have slain a man for wounding me, a young man for striking me.
+“亚大和洗拉，听见我的话音；拉麦的妻子，听从我的话语。而因为使我负伤，我已残杀一个男人，而因为击打我，我残杀了一个年轻人。
+% If Cain is avenged sevenfold, then Lamech seventy-sevenfold.”
+\N 如果该隐得七重复仇，那么拉麦得七十七重。”
+
+% Seth and Enosh
+\subsection*{塞特和以挪士}
+
+% And Adam again had relations with his wife, and she gave birth to a son and named him Seth, saying, “God has granted me another seed in place of Abel, since Cain killed him.”
+\N 而亚当再次与他的妻子同房，她就生下一个儿子并给他取名塞特，说，“上帝已准予我另一个苗裔代替亚伯，因为该隐杀了他。”
+
+% And to Seth also a son was born, and he called him Enosh. At that time men began to call upon the name of the LORD.
+\N 而由塞特也出生了一个儿子，而他称他以挪士。
+
+在那时人们开始求靠耶和华的名。
 	
 \thispagestyle{empty}
 \newpage
