--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -453,6 +453,52 @@
 \N 而由塞特也出生了一个儿子，而他称他以挪士。
 
 在那时人们开始求靠耶和华的名。
+
+% Genesis 5
+\section{第五章}
+
+% The Descendants of Adam
+\subsection*{亚当的后代}
+
+% This is the book of the generations of Adam. In the day that God created man, He made him in His own likeness.
+\N 这是亚当世代的族谱。在上帝创造人的那日，祂依祂自身的样子制造了他。
+% Male and female He created them, and He blessed them. And in the day they were created, He called them “man.”
+\N 祂创造了他们，男性和女性，而祂祝福他们。而在他们被创造的那日，祂称他们为“人。”
+
+% When Adam was 130 years old, he had a son in his own likeness, after his own image; and he named him Seth. 
+\N 当亚当130岁时，他有了一个依他自身样子，照他自身形象的儿子；而他给他取名塞特。
+% And after he had become the father of Seth, Adam lived 800 years and had other sons and daughters.
+\N 而在他成为塞特父亲之后，亚当活了800年并有其他儿子和女儿。
+% So Adam lived a total of 930 years, and then he died.
+\N 所以亚当总共活了930年，然后他就死了。
+
+% When Seth was 105 years old, he became the father of Enosh.
+\N 当塞特105岁时，他成为了以挪士的父亲。
+% And after he had become the father of Enosh, Seth lived 807 years and had other sons and daughters.
+\N 而在他成为以挪士父亲之后，塞特活了807年并有其他儿子和女儿。
+% So Seth lived a total of 912 years, and then he died.
+\N 所以塞特总共活了912年，然后他就死了。
+
+% When Enosh was 90 years old, he became the father of Kenan.
+\N 当以挪士90岁时，他成为了该南的父亲。
+% And after he had become the father of Kenan, Enosh lived 815 years and had other sons and daughters. 
+\N 而在他成为该南父亲之后，以挪士活了815年并有其他儿子和女儿。
+% So Enosh lived a total of 905 years, and then he died.
+\N 所以以挪士总共活了905年，然后他就死了。
+
+% When Kenan was 70 years old, he became the father of Mahalalel.
+\N 当该南70岁时，他成为了玛勒列的父亲。
+% And after he had become the father of Mahalalel, Kenan lived 840 years and had other sons and daughters.
+\N 而在他成为玛勒列父亲之后，该南活了840年并有其他儿子和女儿。
+% So Kenan lived a total of 910 years, and then he died.
+\N 所以该南总共活了910年，然后他就死了。
+
+% When Mahalalel was 65 years old, he became the father of Jared.
+\N 当玛勒列65岁时，他成为了雅列的父亲。
+% And after he had become the father of Jared, Mahalalel lived 830 years and had other sons and daughters.
+\N 而在他成为雅列父亲之后，玛勒列活了830年并有其他儿子和女儿。
+% So Mahalalel lived a total of 895 years, and then he died.
+\N 所以玛勒列总共活了895年，然后他就死了。
 	
 \thispagestyle{empty}
 \newpage
