--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -328,7 +328,7 @@
 \N 而对亚当祂说：
 
 % “Because you have listened to the voice of your wife and have eaten from the tree of which I commanded you not to eat, cursed is the ground because of you; through toil you will eat of it all the days of your life.
-“因为你已听从你妻子的话音并已以我命令了你不要吃的树为食，地面因你受咒诅；在你生命的所有日子，借着劳苦你才会从它有吃的。
+“因为你已听从你妻子的话音并已以我命令了你不要吃的树为食，地面因你受咒诅；在你生命的所有日子，借着艰苦你才会从它有吃的。
 
 % Both thorns and thistles it will yield for you, and you will eat the plants of the field.
 \N 它会为你结出荆棘和刺蓟，而你会吃田野的植物。
@@ -468,37 +468,79 @@
 % When Adam was 130 years old, he had a son in his own likeness, after his own image; and he named him Seth. 
 \N 当亚当130岁时，他有了一个依他自身样子，照他自身形象的儿子；而他给他取名塞特。
 % And after he had become the father of Seth, Adam lived 800 years and had other sons and daughters.
-\N 而在他成为塞特父亲之后，亚当活了800年并有其他儿子和女儿。
+\N 而在他成为塞特的父亲之后，亚当活了800年并有其他儿子和女儿。
 % So Adam lived a total of 930 years, and then he died.
 \N 所以亚当总共活了930年，然后他就死了。
 
 % When Seth was 105 years old, he became the father of Enosh.
 \N 当塞特105岁时，他成为了以挪士的父亲。
 % And after he had become the father of Enosh, Seth lived 807 years and had other sons and daughters.
-\N 而在他成为以挪士父亲之后，塞特活了807年并有其他儿子和女儿。
+\N 而在他成为以挪士的父亲之后，塞特活了807年并有其他儿子和女儿。
 % So Seth lived a total of 912 years, and then he died.
 \N 所以塞特总共活了912年，然后他就死了。
 
 % When Enosh was 90 years old, he became the father of Kenan.
 \N 当以挪士90岁时，他成为了该南的父亲。
 % And after he had become the father of Kenan, Enosh lived 815 years and had other sons and daughters. 
-\N 而在他成为该南父亲之后，以挪士活了815年并有其他儿子和女儿。
+\N 而在他成为该南的父亲之后，以挪士活了815年并有其他儿子和女儿。
 % So Enosh lived a total of 905 years, and then he died.
 \N 所以以挪士总共活了905年，然后他就死了。
 
 % When Kenan was 70 years old, he became the father of Mahalalel.
 \N 当该南70岁时，他成为了玛勒列的父亲。
 % And after he had become the father of Mahalalel, Kenan lived 840 years and had other sons and daughters.
-\N 而在他成为玛勒列父亲之后，该南活了840年并有其他儿子和女儿。
+\N 而在他成为玛勒列的父亲之后，该南活了840年并有其他儿子和女儿。
 % So Kenan lived a total of 910 years, and then he died.
 \N 所以该南总共活了910年，然后他就死了。
 
 % When Mahalalel was 65 years old, he became the father of Jared.
 \N 当玛勒列65岁时，他成为了雅列的父亲。
 % And after he had become the father of Jared, Mahalalel lived 830 years and had other sons and daughters.
-\N 而在他成为雅列父亲之后，玛勒列活了830年并有其他儿子和女儿。
+\N 而在他成为雅列的父亲之后，玛勒列活了830年并有其他儿子和女儿。
 % So Mahalalel lived a total of 895 years, and then he died.
 \N 所以玛勒列总共活了895年，然后他就死了。
+
+% God Takes Up Enoch
+\subsection*{上帝接取以诺}
+
+% When Jared was 162 years old, he became the father of Enoch.
+\N 当雅列162岁时，他成为了以诺的父亲。
+% And after he had become the father of Enoch, Jared lived 800 years and had other sons and daughters.
+\N 而在他成为以诺的父亲之后，雅列活了800年并有其他儿子和女儿。
+% So Jared lived a total of 962 years, and then he died.
+\N 所以雅列总共活了962年，然后他就死了。
+
+% When Enoch was 65 years old, he became the father of Methuselah. 
+\N 当以诺65岁时，他成为了玛土撒拉的父亲。
+% And after he had become the father of Methuselah, Enoch walked with God 300 years and had other sons and daughters.
+\N 而在他成为玛土撒拉的父亲之后，以诺与上帝同行300年并有其他儿子和女儿。
+% So Enoch lived a total of 365 years.
+\N 所以以诺总共活了365年。
+
+% Enoch walked with God, and then he was no more, because God had taken him away.
+\N 以诺与上帝同行，而然后他就不在了，因为上帝已将他带走。
+
+% From Methuselah to Noah
+\subsection*{从玛土撒拉到挪亚}
+
+% When Methuselah was 187 years old, he became the father of Lamech.
+\N 当玛土撒拉187岁时，他成为了拉麦的父亲。
+% And after he had become the father of Lamech, Methuselah lived 782 years and had other sons and daughters.
+\N 而在他成为拉麦的父亲之后，玛土撒拉活了782年并有其他儿子和女儿。
+% So Methuselah lived a total of 969 years, and then he died.
+\N 所以玛土撒拉总共活了969年，然后他就死了。
+
+% When Lamech was 182 years old, he had a son.
+\N 当拉麦182岁时，他有了一个儿子。
+% And he named him Noah, saying, “May this one comfort us in the labor and toil of our hands caused by the ground that the LORD has cursed.”
+\N 而他给他取名挪亚，说，“愿这一个在这由耶和华已咒诅的地面所致的我们双手的操劳和艰苦中安慰我们。”
+% And after he had become the father of Noah, Lamech lived 595 years and had other sons and daughters.
+\N 而在他成为挪亚的父亲之后，拉麦活了595年并有其他儿子和女儿。
+% So Lamech lived a total of 777 years, and then he died.
+\N 所以拉麦总共活了777年，然后他就死了。
+
+% After Noah was 500 years old, he became the father of Shem, Ham, and Japheth.
+\N 在挪亚500岁之后，他成为闪、含和雅弗的父亲。
 	
 \thispagestyle{empty}
 \newpage
