--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -423,7 +423,7 @@
 \N 而该隐和他的妻子同房，她就受孕而生下以诺。然后该隐建造了一座城市并以他儿子以诺为它取名。
 
 % Now to Enoch was born Irad, and Irad was the father of Mehujael, and Mehujael was the father of Methusael, and Methusael was the father of Lamech.
-\N 现在由以诺出生了以拿，而以拿是米户雅利的父亲，而米户雅利是玛土撒利的父亲，而玛土撒利是拉麦的父亲。
+\N 现在从以诺出生了以拿，而以拿是米户雅利的父亲，而米户雅利是玛土撒利的父亲，而玛土撒利是拉麦的父亲。
 % And Lamech married two women, one named Adah and the other Zillah.
 \N 而拉麦娶了两个女人，一个名叫亚大而另一个叫洗拉。
 
@@ -450,7 +450,7 @@
 \N 而亚当再次与他的妻子同房，她就生下一个儿子并给他取名塞特，说，“上帝已准予我另一个苗裔代替亚伯，因为该隐杀了他。”
 
 % And to Seth also a son was born, and he called him Enosh. At that time men began to call upon the name of the LORD.
-\N 而由塞特也出生了一个儿子，而他称他以挪士。
+\N 而从塞特也出生了一个儿子，而他称他以挪士。
 
 在那时人们开始求靠耶和华的名。
 
@@ -541,6 +541,46 @@
 
 % After Noah was 500 years old, he became the father of Shem, Ham, and Japheth.
 \N 在挪亚500岁之后，他成为闪、含和雅弗的父亲。
+
+% Genesis 6
+\section{第六章}
+
+% Corruption on the Earth
+\subsection*{地上的败坏}
+
+% Now when men began to multiply on the face of the earth and daughters were born to them,
+\N 现在当人类开始在地表倍增，而女儿们从他们出生时，
+% the sons of God saw that the daughters of men were beautiful, and they took as wives whomever they chose.
+\N 上帝的儿子们看见人类的女儿漂亮，他们就娶任何他们挑选的为妻子。
+
+% So the LORD said, “My Spirit will not contend with man forever, for he is mortal; his days shall be 120 years.”
+\N 所以耶和华说，“我的圣灵不会永远同人争竞，因为他是凡人；他的日子必定只有120年。”
+
+% The Nephilim were on the earth in those days—and afterward as well—when the sons of God had relations with the daughters of men. And they bore them children who became the mighty men of old, men of renown.
+\N 在那些日子巨人还在地上---而之后也是---当上帝的儿子们与人类的女儿们同房时。而他们为他们诞生儿女，这些儿女就成为古时的勇士，名人。
+
+% Then the LORD saw that the wickedness of man was great upon the earth, and that every inclination of the thoughts of his heart was altogether evil all the time.
+\N 然后耶和华看到人类在地上的邪恶变得巨大，而无时无刻他内心思想的每个倾向完完全全都是恶的。
+% And the LORD regretted that He had made man on the earth, and He was grieved in His heart.
+\N 而耶和华后悔祂已在地上制造人，而祂在祂的心中忧伤。
+% So the LORD said, “I will blot out man, whom I have created, from the face of the earth—every man and beast and crawling creature and bird of the air—for I am grieved that I have made them.”
+\N 所以耶和华说，“我会将我已创造的人类从地表抹去---每个人、走兽、爬行生物和空中的鸟---因为我忧伤我已制造他们。”
+
+% Noah’s Favor with God
+\subsection*{上帝对挪亚的青睐}
+
+% Noah, however, found favor in the eyes of the LORD.
+\N 但是，挪亚在耶和华眼中得到青睐。
+
+% This is the account of Noah. Noah was a righteous man, blameless in his generation; Noah walked with God.
+\N 这是关于挪亚的记述。挪亚是一个义人，在他的世代无可指摘；挪亚与上帝同行。
+% And Noah had three sons: Shem, Ham, and Japheth.
+\N 而挪亚有三个儿子：闪、含和雅弗。
+
+% Now the earth was corrupt in the sight of God, and full of violence.
+\N 现在大地在上帝视域中败坏，而充满暴力。
+% And God looked upon the earth and saw that it was corrupt; for all living creatures on the earth had corrupted their ways.
+\N 而上帝看向大地而看见它是败坏的；因为地上所有圣灵都已将它们的道路败坏。
 	
 \thispagestyle{empty}
 \newpage
