--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -199,7 +199,7 @@
 \N 但泉水从大地涌出并浇灌地面的整个表面。
 
 % Then the LORD God formed a man from the dust of the ground and breathed into his nostrils the breath of life, and the man became a living being.
-\N 然后耶和华上帝从地面的尘土中塑造了一个人并将生命的气息吐息进他的鼻孔，那人就成为了一个生命体。
+\N 然后耶和华上帝从地面的尘土中塑造了一个人并将生命气息吐息进他的鼻孔，那人就成为了一个生命体。
 
 % And the LORD God planted a garden in Eden, in the east, where He placed the man He had formed.
 \N 而耶和华上帝在东方的伊甸中培植了一个园子，祂将祂已塑造的那人安置在那里。
@@ -581,6 +581,35 @@
 \N 现在大地在上帝视域中败坏，而充满暴力。
 % And God looked upon the earth and saw that it was corrupt; for all living creatures on the earth had corrupted their ways.
 \N 而上帝看向大地而看见它是败坏的；因为地上所有圣灵都已将它们的道路败坏。
+
+% Preparing the Ark
+\subsection*{预备方舟}
+
+% Then God said to Noah, “The end of all living creatures has come before Me, because through them the earth is full of violence. Now behold, I will destroy both them and the earth.
+\N 于是上帝对挪亚说，“所有生灵的末了已来到我面前，因为借着它们大地充满暴力。现在看啊，我会将它们和大地均毁灭。
+
+% Make for yourself an ark of gopher wood; make rooms in the ark and coat it with pitch inside and out.
+\N 为你自己制造一个歌斐木的方舟；要在方舟中造房间并将它内外涂上沥青。
+% And this is how you are to build it: The ark is to be 300 cubits long, 50 cubits wide, and 30 cubits high.
+\N 而你要这样建造它：方舟要又300肘尺长，50肘尺宽，和30肘尺高。
+% You are to make a roof for the ark, finish its walls a cubit from the top, place a door in the side of the ark, and build lower, middle, and upper decks.
+\N 你要为方舟造一个船顶，它的墙要完工在离顶部一肘尺处，在方舟的一侧安置一个门，并建造底层、中层和上层的甲板。
+
+% And behold, I will bring floodwaters upon the earth to destroy every creature under the heavens that has the breath of life. Everything on the earth will perish.
+\N 而看啊，我会将洪水带到大地并摧毁在诸天下每个有生命气息的生物。在地上的一起都会灭亡。
+% But I will establish My covenant with you, and you will enter the ark—you and your sons and your wife and your sons’ wives with you.
+\N 但我会与你确立我的圣约，而你会进入方舟---你以及与你一起的你的儿子们、你的妻子和你儿子们的妻子们。
+
+% And you are to bring two of every living creature into the ark—male and female—to keep them alive with you.
+\N 而你要将每一生灵带两个进入方舟---公的和母的---使它们与你一起保留性命。
+% Two of every kind of bird and animal and crawling creature will come to you to be kept alive. 
+\N 每种鸟类、动物和爬行生物的两个会到你这里来以被保留性命。
+% You are also to take for yourself every kind of food that is eaten and gather it as food for yourselves and for the animals.”
+\N 你也要为你自己取每种吃的食物，为你并为这些动物将它作为食物收集。”
+
+% So Noah did everything precisely as God had commanded him.
+\N 所以挪亚一点不差地按上帝已命令他的做了一切。
+
 	
 \thispagestyle{empty}
 \newpage
