--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -610,7 +610,21 @@
 % So Noah did everything precisely as God had commanded him.
 \N 所以挪亚一点不差地按上帝已命令他的做了一切。
 
-	
+% Genesis 7
+\section{第七章}
+
+% The Great Flood
+\subsection*{大洪灾}
+
+% Then the LORD said to Noah, “Go into the ark, you and all your family, because I have found you righteous in this generation.
+\N 然后耶和华对挪亚说，“你和你家庭所有人走进方舟，因为我已发现你在这个世代是正义的。
+% You are to take with you seven pairs of every kind of clean animal, a male and its mate; a pair of every kind of unclean animal, a male and its mate;
+\N 你要取每种洁净动物七对与你一起，一个公的和它的配偶；每种不洁动物一对，一个公的和它的配偶；
+% and seven pairs of every kind of bird of the air, male and female, to preserve their offspring on the face of all the earth.
+\N 和每种空中的鸟类七对，公的和母的，以在全地表上保守它们的幼崽。
+% For seven days from now I will send rain on the earth for forty days and forty nights, and I will wipe from the face of the earth every living thing I have made.”
+\N 因为从现在起七天后我会送雨到地上四十天和四十夜，而我会从地表擦除我已造的每个活物。”
+
 \thispagestyle{empty}
 \newpage
 
