--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -625,6 +625,27 @@
 % For seven days from now I will send rain on the earth for forty days and forty nights, and I will wipe from the face of the earth every living thing I have made.”
 \N 因为从现在起七天后我会送雨到地上四十天和四十夜，而我会从地表擦除我已造的每个活物。”
 
+% And Noah did all that the LORD had commanded him.
+\N 而挪亚做了耶和华已命令他的所有。
+
+% Now Noah was 600 years old when the floodwaters came upon the earth.
+\N 现在当洪水临到大地时，挪亚600岁。
+% And Noah and his wife, with his sons and their wives, entered the ark to escape the waters of the flood.
+\N 而挪亚和他的妻子，与他的儿子和他们的妻子一起，进入方舟以逃脱洪灾之水。
+% The clean and unclean animals, the birds, and everything that crawls along the ground 
+\N 洁净的和不洁的动物、鸟类、及沿地面爬行的一切
+% came to Noah to enter the ark, two by two, male and female, as God had commanded Noah.
+\N 来到挪亚这里进入方舟，两个两个的，公的和母的，如上帝已命令挪亚的。
+
+% And after seven days the floodwaters came upon the earth.
+\N 而在七日之后洪水临到大地。
+% In the six hundredth year of Noah’s life, on the seventeenth day of the second month, all the fountains of the great deep burst forth, and the floodgates of the heavens were opened.
+\N 在挪亚人生的第六百年，在二月的第七天，巨大深渊的所有源泉都迸发出来，而诸天的洪闸被打开。
+% And the rain fell upon the earth for forty days and forty nights.
+\N 而雨降到大地上四十天和四十夜。
+
+
+
 \thispagestyle{empty}
 \newpage
 
