--- a/genesis/source/genesis.tex
+++ b/genesis/source/genesis.tex
@@ -635,7 +635,7 @@
 % The clean and unclean animals, the birds, and everything that crawls along the ground 
 \N 洁净的和不洁的动物、鸟类、及沿地面爬行的一切
 % came to Noah to enter the ark, two by two, male and female, as God had commanded Noah.
-\N 来到挪亚这里进入方舟，两个两个的，公的和母的，如上帝已命令挪亚的。
+\N 来到挪亚这里进入方舟，两两成对，公的和母的，如上帝已命令挪亚的。
 
 % And after seven days the floodwaters came upon the earth.
 \N 而在七日之后洪水临到大地。
@@ -643,6 +643,34 @@
 \N 在挪亚人生的第六百年，在二月的第七天，巨大深渊的所有源泉都迸发出来，而诸天的洪闸被打开。
 % And the rain fell upon the earth for forty days and forty nights.
 \N 而雨降到大地上四十天和四十夜。
+
+% On that very day Noah entered the ark, along with his sons Shem, Ham, and Japheth, and his wife, and the three wives of his sons—
+\N 正是在那天挪亚进入方舟，与他的儿子闪、含和雅弗，和他的妻子，以及他儿子们的三位妻子一道---
+% they and every kind of wild animal, livestock, crawling creature, bird, and winged creature.
+\N 他们和每一种野兽，牲畜，爬行生物，鸟类，和有翼生物。
+% They came to Noah to enter the ark, two by two of every creature with the breath of life.
+\N 它们到挪亚这里进入方舟，每个有生命气息的生物两两成对。
+% And they entered, the male and female of every living thing, as God had commanded Noah. Then the LORD shut him in.
+\N 而每个活物公的和母的，它们都进入了，如上帝已命令挪亚的。然后耶和华将他关在里面。
+
+% For forty days the flood kept coming on the earth, and the waters rose and lifted the ark high above the earth.
+\N 四十日洪灾保持不断降在大地上，而诸水升起并将方舟高高托起到大地之上。
+% So the waters continued to surge and rise greatly on the earth, and the ark floated on the surface of the waters.
+\N 所以诸水持续激涌并在地上大幅升起，而方舟漂浮在诸水的表面。
+% Finally, the waters completely prevailed upon the earth, so that all the high mountains under all the heavens were covered.
+\N 最终，诸水完全在地上泛滥，以致于在所有诸天之下的所有高山都被覆盖。
+
+% The waters rose and covered the mountaintops to a depth of fifteen cubits.
+\N 诸水升起并覆盖山顶达十五肘尺的深度。
+% And every living thing that moved upon the earth perished—birds, livestock, animals, every creature that swarms upon the earth, and all mankind.
+\N 而每个在地上活动的活物都灭亡了---鸟类、牲畜、动物、每个在地上成群的生物，以及所有人类。
+% Of all that was on dry land, everything that had the breath of life in its nostrils died. 
+\N 所有那些在旱地上的，一切在其鼻孔有生命气息都死了。
+% And every living thing on the face of the earth was destroyed—man and livestock, crawling creatures and birds of the air; they were blotted out from the earth, and only Noah and those with him in the ark remained.
+\N 而每个在地表的活物都被摧毁---人和牲畜、爬行生物和空中的鸟类；他们从地上被抹去，而只有挪亚和在方舟中与他一起的那些留存。
+
+% And the waters prevailed upon the earth for 150 days.
+\N 而诸水在地上泛滥150日。
 
 
 
